[gd_scene load_steps=2 format=3 uid="uid://pause_menu"]

[ext_resource type="Script" path="res://scenes/PauseMenu.gd" id="1"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -120.0
offset_right = 150.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "PAUSE"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 28

[node name="ResumeButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Continuer"

[node name="RestartButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Recommencer"

[node name="LevelSelectButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Changer de Niveau"

[node name="QuitButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Quitter"

[connection signal="pressed" from="Panel/VBox/ResumeButton" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/VBox/RestartButton" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Panel/VBox/LevelSelectButton" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="Panel/VBox/QuitButton" to="." method="_on_quit_pressed"]
